update basic UI

--- a/index.html
+++ b/index.html
@@ -38,12 +38,15 @@
       <button type="submit">Calculate!</button>
     </div>
     <table width="50%" class="table">
+      <thead>
       <tr>
         <th></th>
         <th>Employee</th>
         <th>Employer</th>
         <th>Sub-Total</th>
       </tr>
+    </thead>
+    <tbody>
       <tr>
         <td>EPF</td>
         <td></td>
@@ -86,6 +89,7 @@
         <td></td>
         <td></td>
       </tr>
+    </tbody>
     </table>
   </body>
 </html>
